chore: improve API and some small changes
